--- a/forum.html
+++ b/forum.html
@@ -41,7 +41,7 @@
           </a>
           <div class="traad-container">
             <a href="forum-traad.html"><h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
           </a>
             <p class="forum-beskrivelse">
@@ -50,7 +50,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -58,7 +58,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -71,7 +71,7 @@
           </h1>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -79,7 +79,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -87,7 +87,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -102,7 +102,7 @@
           </h1>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -110,7 +110,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -118,7 +118,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -131,7 +131,7 @@
           </h1>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -139,7 +139,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -147,7 +147,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida
+              Morbi pharetra sit amet diam nec gravida?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
