--- a/materialer.html
+++ b/materialer.html
@@ -73,31 +73,31 @@
       <section id="section-lektionsplaner">
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/001.jpg" class="lektionsplan-billede">
-        <p class="lektionsplan-beskrivelse">
+        <p class="boks-hvidtekst">
           Hej hej hej.
         </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/002.jpg" class="lektionsplan-billede">
-        <p class="lektionsplan-beskrivelse">
+        <p class="boks-hvidtekst">
           Hej hej hej.
         </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/003.jpg" class="lektionsplan-billede">
-        <p class="lektionsplan-beskrivelse">
+        <p class="boks-hvidtekst">
           Hej hej hej.
         </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/004.jpg" class="lektionsplan-billede">
-        <p class="lektionsplan-beskrivelse">
+        <p class="boks-hvidtekst">
           Hej hej hej.
         </p>
       </div>
       <div class="lektionsplan">
         <img src="assets/images/lektionsplaner/005.jpg" class="lektionsplan-billede">
-        <p class="lektionsplan-beskrivelse">
+        <p class="boks-hvidtekst">
           Hej hej hej.
         </p>
       </div>
