--- a/opgaver-dansk.html
+++ b/opgaver-dansk.html
@@ -37,14 +37,14 @@
           Dansk
         </h1>
         <div class="row-1">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <a href="opgaver-dansk-retstavning.html"><img src="http://via.placeholder.com/400x250" class="img-margin"></a>
+        <img src="http://via.placeholder.com/400x250" class="img-margin">
+        <img src="http://via.placeholder.com/400x250" class="img-margin">
       </div>
       <div class="row-2">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
-        <img src="http://via.placeholder.com/450x250" class="img-margin">
+        <img src="http://via.placeholder.com/400x250" class="img-margin">
+        <img src="http://via.placeholder.com/400x250" class="img-margin">
+        <img src="http://via.placeholder.com/400x250" class="img-margin">
       </div>
       </div>
     </div>
