--- a/materialer.html
+++ b/materialer.html
@@ -130,7 +130,7 @@
         <h1 class="boks-titel">
           Emnedage
         </h1>
-        <p class="boks-beskrivelse_left">
+        <p class="boks-tekst_left">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
@@ -139,7 +139,7 @@
           Fysik<br />
           Matematik
         </p>
-        <p class="boks-beskrivelse_right">
+        <p class="boks-tekst_right">
           Dansk<br />
           Engelsk<br />
           Kodning<br />
