--- a/index.html
+++ b/index.html
@@ -27,31 +27,39 @@
   <header id="header-forside">
     <div id="header_container">
         <div class="image_section1">
-        <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
-          <div class="kasse1">
-            <p>
-              Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
-              Det giver dig masser af tid til det, der virkelig betyder noget – din undervisning. Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
-            </p>
+          <div class="picture-container">
+              <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
+              <p class="text-on-picture">Læs nu</p>
+            <div class="kasse1">
+                <p>
+                  Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
+                  Det giver dig masser af tid til det, der virkelig betyder noget – din undervisning. Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
+                </p>
+            </div>
           </div>
-      </div>
-
-      <div class="image_section1">
-      <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
-        <div class="kasse1">
-          <p>
-            Lorem ipsum dolor sit amet, case tibique per in. An cum labitur neglegentur. At primis salutandi qui, duo ne esse movet. In sale ferri virtute his, an vocibus percipit eum.
-            Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
-          </p>
+        </div>
+        <div class="image_section1">
+          <div class="picture-container">
+              <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
+              <p class="text-on-picture">Læs nu</p>
+            <div class="kasse1">
+              <p>
+                Lorem ipsum dolor sit amet, case tibique per in. An cum labitur neglegentur. At primis salutandi qui, duo ne esse movet. In sale ferri virtute his, an vocibus percipit eum.
+                Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
+              </p>
+          </div>
         </div>
       </div>
 
       <div class="image_section1">
-      <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
-        <div class="kasse1">
-          <p>
-            Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu. Ei indoctum reformidans mea. Errem iuvaret voluptaria mea in, ea ferri placerat intellegebat mei, possit luptatum duo no. Ad nec nonumy scripta menandri. Primis signiferumque conclusionemque ea has, ipsum impetus cum id, vim saepe quaestio ex.
-          </p>
+          <div class="picture-container">
+              <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
+              <p class="text-on-picture">Læs nu</p>
+            <div class="kasse1">
+              <p>
+                Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu. Ei indoctum reformidans mea. Errem iuvaret voluptaria mea in, ea ferri placerat intellegebat mei, possit luptatum duo no. Ad nec nonumy scripta menandri. Primis signiferumque conclusionemque ea has, ipsum impetus cum id, vim saepe quaestio ex.
+              </p>
+          </div>
         </div>
       </div>
     </div>
