opgaver dansk retskrivning

--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -48,6 +48,66 @@
               hej
             </p>
           </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
+          <div class="opgave-boks">
+            <img src="" class="opgave-billede">
+            <p class="boks-hvidtekst">
+              hej
+            </p>
+          </div>
         </div>
       </div>
      <footer>
