VI HAR REDDET DEN

--- a/index.html
+++ b/index.html
@@ -24,46 +24,47 @@
       </ul>
     </nav>
     <div id="nav_undersidebar"></div>
-  <header id="header-forside">
-    <div id="header_container">
-        <div class="image_section1">
-          <div class="picture-container">
-              <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
-              <p class="text-on-picture">Læs nu</p>
-            <div class="kasse1">
-                <p>
-                  Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
-                  Det giver dig masser af tid til det, der virkelig betyder noget – din undervisning. Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
+    <header id="header-forside">
+      <div id="header_container">
+          <div class="image_section1">
+            <div class="picture-container">
+                <img class="headerpicture" src="assets/images/forsidebilled1.png" alt="billede1">
+                <p class="text-on-picture">Læs mere</p>
+              <div class="kasse1">
+                  <h1 class="overskrift">Forbered dine elever til fremtiden</h1>
+                  <p class="nyhedtekst">
+                    Alle portaler er udarbejdet efter Fælles Mål af vores redaktører, så du altid kan være sikker på at leve op til de gældende krav.
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="image_section1">
+            <div class="picture-container">
+                <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
+                <p class="text-on-picture">Læs mere</p>
+              <div class="kasse1">
+                <h1 class="overskrift">Mangel på inspiration?</h1>
+                <p class="nyhedtekst">
+                  Lorem ipsum dolor sit amet, case tibique per in. An cum labitur neglegentur. At primis salutandi qui, duo ne esse movet  signiferumque conclusionemque ea has, ipsum impetu....
                 </p>
             </div>
           </div>
         </div>
-        <div class="image_section1">
-          <div class="picture-container">
-              <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
-              <p class="text-on-picture">Læs nu</p>
-            <div class="kasse1">
-              <p>
-                Lorem ipsum dolor sit amet, case tibique per in. An cum labitur neglegentur. At primis salutandi qui, duo ne esse movet. In sale ferri virtute his, an vocibus percipit eum.
-                Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu.
-              </p>
-          </div>
-        </div>
-      </div>
 
-      <div class="image_section1">
-          <div class="picture-container">
-              <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
-              <p class="text-on-picture">Læs nu</p>
-            <div class="kasse1">
-              <p>
-                Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu. Ei indoctum reformidans mea. Errem iuvaret voluptaria mea in, ea ferri placerat intellegebat mei, possit luptatum duo no. Ad nec nonumy scripta menandri. Primis signiferumque conclusionemque ea has, ipsum impetus cum id, vim saepe quaestio ex.
-              </p>
+        <div class="image_section1">
+            <div class="picture-container">
+                <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
+                <p class="text-on-picture">Læs mere</p>
+              <div class="kasse1">
+                <h1 class="overskrift">Optimer din undervisning!</h1>
+                <p class="nyhedtekst">
+                  Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu. Ei indoctum reformidans mea. Errem iuvaret voluptaria mea in, ea ferri placerat intellegebat mei, possit luptatum duo no. Ad nec nonumy scripta menandri.
+                </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-      </header>
+        </header>
   <div id="container">
     <div class="section_container">
 
