see if it works

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
         <h2>Johanne Hansen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
-        <p class="beskrivelse">Jeg har virkelig svært ved at få mine elever til at  <br> lærer endelser. Er der en der har en god opgave de kan anbefale? Jeg er åben for de meste.... <br></p>
+        <p class="beskrivelse">Jeg har virkelig svært ved at få mine elever til at  <br> lærer endelser. Er der en der har en god opgave de kan anbefale? Jeg er åben for de mestedsma.... <br></p>
         <p class="comment">Kommenter</p>
       </div>
 
