billeder og tekst

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <img class="headerpicture" src="assets/images/forsidebilled2.png" alt="billede2">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
-                <h1 class="overskrift">Mangel på inspiration?</h1>
-                <p class="nyhedtekst">
-                  Lorem ipsum dolor sit amet, case tibique per in. An cum labitur neglegentur. At primis salutandi qui, duo ne esse movet  signiferumque conclusionemque ea has, ipsum impetu....
+                <h1 class="overskrift">Mangel på inspiration til undervisningen?</h1>
+                <p class="nyhedtekst">Har du ofte problemer med at finde på nye og spændene ideer til din undervisning? Vi har her 20 gode råd til dig!
+
                 </p>
             </div>
           </div>
@@ -56,9 +56,9 @@
                 <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
-                <h1 class="overskrift">Optimer din undervisning!</h1>
+                <h1 class="overskrift">lær kodning nu! Med Robotten KUBO</h1>
                 <p class="nyhedtekst">
-                  Cum eu sint vivendum recteque, summo hendrerit eu pro, noster philosophia est eu. Ei indoctum reformidans mea. Errem iuvaret voluptaria mea in, ea ferri placerat intellegebat mei, possit luptatum duo no. Ad nec nonumy scripta menandri.
+                  Kodning fylder mere og mere i skolen. Det er vigtig vi lære vores elever at kode, da fremtidens arbejdspladser...
                 </p>
             </div>
           </div>
