--- a/materialer.html
+++ b/materialer.html
@@ -36,19 +36,19 @@
         Kurser
       </h1>
       <div class="kursus">
-        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <img src="assets/images/kursus1.png" class="kursus-billede">
         <p class="kursus-beskrivelse">
           Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
         </p>
       </div>
       <div class="kursus">
-        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <img src="assets/images/kursus2.png" class="kursus-billede">
         <p class="kursus-beskrivelse">
           Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
         </p>
       </div>
       <div class="kursus">
-        <img src="http://via.placeholder.com/125x125" class="kursus-billede">
+        <img src="assets/images/kursus3.png" class="kursus-billede">
         <p class="kursus-beskrivelse">
           Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
         </p>
@@ -117,13 +117,13 @@
           Matematik
         </p>
         <p class="boks-tekst_right">
-          Dansk<br />
-          Engelsk<br />
-          Kodning<br />
-          Samfundsfag<br />
-          Tysk<br />
-          Fysik<br />
-          Matematik
+          Idræt<br />
+          Geografi<br />
+          Billedkunst<br />
+          Biologi<br />
+          Andre sprog<br />
+          Religion<br />
+          Hjemmekunsstskab
         </p>
     </section>
       <section id="section_emnedage">
@@ -140,13 +140,13 @@
           Matematik
         </p>
         <p class="boks-tekst_right">
-          Dansk<br />
-          Engelsk<br />
-          Kodning<br />
-          Samfundsfag<br />
-          Tysk<br />
-          Fysik<br />
-          Matematik
+          Georgafi<br />
+          Idræt<br />
+          Biologi<br />
+          Religion<br />
+          Andre sprog<br />
+          Hjemmekunsskab<br />
+          billedkunst
         </p>
       </section>
     </section>
