--- a/opgaver.html
+++ b/opgaver.html
@@ -34,17 +34,17 @@
      <div id="wrapper-opgaver">
        <div id="opgaver-container">
        <a href="opgaver-dansk.html" class="img-opgave1">Dansk</a>
-       <a href="#" class="img-opgave2">Opgave 2</a>
-       <a href="#" class="img-opgave3">Opgave 3</a>
-       <a href="#" class="img-opgave4">Opgave 4</a>
-       <a href="#" class="img-opgave5">Opgave 5</a>
-       <a href="#" class="img-opgave6">Opgave 6</a>
-       <a href="#" class="img-opgave7">Opgave 7</a>
-       <a href="#" class="img-opgave8">Opgave 8</a>
-       <a href="#" class="img-opgave9">Opgave 9</a>
-       <a href="#" class="img-opgave10">Opgave 10</a>
-       <a href="#" class="img-opgave11">Opgave 11</a>
-       <a href="#" class="img-opgave12">Opgave 12</a>
+       <a href="#" class="img-opgave2">Matematik</a>
+       <a href="#" class="img-opgave3">Engelsk</a>
+       <a href="#" class="img-opgave4">Kodning</a>
+       <a href="#" class="img-opgave5">Tysk</a>
+       <a href="#" class="img-opgave6">Samfundsfag</a>
+       <a href="#" class="img-opgave7">Biologi</a>
+       <a href="#" class="img-opgave8">Geografi</a>
+       <a href="#" class="img-opgave9">Fysik</a>
+       <a href="#" class="img-opgave10">Idræt</a>
+       <a href="#" class="img-opgave11">Religion</a>
+       <a href="#" class="img-opgave12">Billedkunst</a>
      </div>
      </div>
      <footer>
