--- a/signin.html
+++ b/signin.html
@@ -8,7 +8,7 @@
   <body>
     <div id="container">
       <div id="logo"></div>
-        <p id="text">Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.</p>
+        <p id="text">KEDU er KUBOs online studieplan platform. Hvis du er lære kan du her inde finde vejledninger, øvelser, videoer og inspiration til din undervisning.<br></br> Du kan også dele din egen viden og dele dine ideer med andre lære over hele verden.Visionen bag KEDU er at skabe et fælles mødested for lærere og undervisere over hele verden.</p>
         <div id="input-container">
           <form action="index.html">
           <input type="text" placeholder="E-mail" required>
@@ -27,32 +27,6 @@
           </div> -->
         </div>
     </div>
-    <footer>
-      <div class="flex justify-center">
-        <div>
-          <h2>Se også</h2> <br>
-          <p class="footer_tekst">
-            <p class="tekst_footer">Vores historie</p>
-            <p class="tekst_footer">Mød teamet</p>
-            <p class="tekst_footer">Presse</p>
-            <p class="tekst_footer">Køb</p>
-        </div>
-        <div class="flytte">
-          <h2>Kontakt</h2>
-          <br>
-          <p class="footer_tekst">KUBO Robotics ApS <br>
-            Niels Bohrs Allé 185 <br>
-            5220 Odense SØ <br>
-            Tlf: 29 22 87 40 </p>
-        </div>
-      </div>
-      <div id="socialmedia">
-        <a href="https://www.linkedin.com/company/kubo-robot/" target="_blank" class="fa fa-linkedin"></a>
-        <a href="https://www.facebook.com/KUBORobot/" target="_blank" class="fa fa-facebook"></a>
-        <a href="https://www.instagram.com/kubo_robotics/" target="_blank" class="fa fa-instagram"></a>
-        <a href="https://www.youtube.com/channel/UChwLFdfKUKjSIjsmqjK1g9A" target="_blank" class="fa fa-youtube"></a>
-        <a href="https://twitter.com/kubo_robot?lang=en" target="_blank" class="fa fa-twitter"></a>
-      </div>
-    </footer>
+
   </body>
   </html>
