--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2>Johanne Hansen</h2>
         <p class="overskrift">Er der en der kan hjælpe?</p>
         <p class="beskrivelse">Jeg har virkelig svært ved at få mine elever til at  <br> lærer endelser. Er der en der har en god opgave de kan anbefale? Jeg er åben for de meste.... <br></p>
-        <p class="comment">Kommenter</p>
+        <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
 
       <div class="boks-person justify-boks">
@@ -81,7 +81,7 @@
         <h2>Lars Andersen</h2>
         <p class="overskrift">Erfaring med kodning?</p>
         <p class="beskrivelse">Jeg skal lave et forløb med mine elever omking kodning. Jeg har aldrig undervist <br>i det før, så jeg ville blive rigtig glad hvis... <br> </p>
-        <p class="comment">Kommenter</p>
+        <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
 
       <div class="boks-person">
@@ -89,7 +89,7 @@
         <h2>Mathias Schmidt</h2>
         <p class="overskrift">SE HER!</p>
         <p class="beskrivelse">Jeg har igår lavet denne opgave med mine elever. <br> Det fungerede rigtitg godt, og derfor vil jeg gerne dele den med jer.  <br></p>
-        <p class="comment">Kommenter</p>
+        <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
 
       <div class="boks-person justify-boks">
@@ -97,7 +97,7 @@
         <h2>Emil Olufsen</h2>
         <p class="overskrift">Er jeg helt galt på den?</p>
         <p class="beskrivelse">En kolega og jeg, diskutere hvorvidt der er rigtig eller forkert at bruge sådan en opgave som<br> denne? Jeg mener ikke den er relevant...<br></p>
-        <p class="comment">Kommenter</p>
+        <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
 
       <div class="boks-person">
@@ -105,7 +105,7 @@
         <h2>Kathrine Mauritsen</h2>
         <p class="overskrift">Kursus i tyskland?</p>
         <p class="beskrivelse">Er der nogen her inde der har erfaring med at tage på kursus i tyskland?<br> <br></p>
-        <p class="comment">Kommenter</p>
+        <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
 
       <div class="boks-person justify-boks">
@@ -113,7 +113,7 @@
         <h2>Olav Iversen</h2>
         <p class="overskrift">God inspiration til matematik i 2. klasse?</p>
         <p class="beskrivelse">Jeg er normalt sproglærer. Men jeg skal være vikar i matematik imorgen. og jeg har ingen ide om.. <br><br></p>
-        <p class="comment">Kommenter</p>
+        <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
     </div>
   </div>
