--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img class="headerpicture" src="assets/images/forsidebilled3.png" alt="billede3">
                 <p class="text-on-picture">Læs mere</p>
               <div class="kasse1">
-                <h1 class="overskrift">lær kodning nu! Med Robotten KUBO</h1>
+                <h1 class="overskrift">Lær kodning nu! Med Robotten KUBO</h1>
                 <p class="nyhedtekst">
                   Kodning fylder mere og mere i skolen. Det er vigtig vi lære vores elever at kode, da fremtidens arbejdspladser...
                 </p>
