--- a/opgaver-dansk.html
+++ b/opgaver-dansk.html
@@ -37,17 +37,71 @@
           Dansk
         </h1>
         <div class="row-1">
-        <a href="opgaver-dansk-retstavning.html"><img src="assets/images/abc.opgaver.png" class="img-margin"></a>
-        <a href="opgaver-dansk-retstavning.html"><img src="assets/images/bog.opgaver.png" class="img-margin"></a>
-        <a href="opgaver-dansk-retstavning.html"><img src="assets/images/krydsord.opgaver.png" class="img-margin"></a>
-      </div>
-      <div class="row-2">
-        <a href="opgaver-dansk-retstavning.html"><img src="assets/images/retskrivning.opgaver.png" class="img-margin"></a>
-        <a href="opgaver-dansk-retstavning.html"><img src="assets/images/medier.opgaver.png" class="img-margin"></a>
-        <a href="opgaver-dansk-retstavning.html"><img src="assets/images/sandt.opgaver.png" class="img-margin"></a>
-      </div>
-      </div>
-    </div>
+          <div class="opgave-container">
+              <a href="opgaver-dansk-retstavning.html">
+                <div class="opgave-img">
+                  <img src="assets/images/abc.opgaver.png">
+                </div>
+                  <div class="opgave-beskrivelse">
+                    Retstavning
+                  </div>
+              </a>
+            </div>
+                <div class="opgave-container">
+                  <a href="opgaver-dansk-retstavning.html">
+                  <div class="opgave-img">
+                    <img src="assets/images/bog.opgaver.png">
+                  </div>
+                  <div class="opgave-beskrivelse">
+                    Retstavning
+                  </div>
+                  </a>
+                </div>
+                  <div class="opgave-container">
+                    <a href="opgaver-dansk-retstavning.html">
+                      <div class="opgave-img">
+                        <img src="assets/images/krydsord.opgaver.png">
+                      </div>
+                        <div class="opgave-beskrivelse">
+                          Krydsord
+                        </div>
+                    </a>
+                  </div>
+            </div>
+              <div class="row-2">
+                  <div class="opgave-container">
+                    <a href="opgaver-dansk-retstavning.html">
+                    <div class="opgave-img">
+                      <img src="assets/images/retskrivning.opgaver.png">
+                    </div>
+                      <div class="opgave-beskrivelse">
+                        Grammatik
+                      </div>
+                    </a>
+                  </div>
+                    <div class="opgave-container">
+                      <a href="opgaver-dansk-retstavning.html">
+                      <div class="opgave-img">
+                        <img src="assets/images/medier.opgaver.png">
+                      </div>
+                        <div class="opgave-beskrivelse">
+                          Medier
+                        </div>
+                      </a>
+                    </div>
+                      <div class="opgave-container">
+                        <a href="opgaver-dansk-retstavning.html">
+                        <div class="opgave-img">
+                          <img src="assets/images/sandt.opgaver.png">
+                        </div>
+                          <div class="opgave-beskrivelse">
+                            Quiz
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
     <footer>
       <div class="flex justify-center">
         <div>
