Rettelse af opgaver-dansk-retstavning.html

--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -37,76 +37,100 @@
             Retstavning
           </h1>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave1.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 1
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave2.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 2
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave3.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 3
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave4.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 4
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave5.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 5
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave6.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 6
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave7.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 7
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave8.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 8
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave9.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 9
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave10.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 10
             </p>
+            </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave11.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 11
             </p>
+          </a>
           </div>
           <div class="opgave-boks">
+            <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave12.png" class="opgave-billede">
             <p class="boks-hvidtekst">
-              hej
+              Opgave 12
             </p>
+            </a>
           </div>
         </div>
       </div>
