--- a/forum-dansk.html
+++ b/forum-dansk.html
@@ -28,19 +28,19 @@
           <div id="header_container">
             <div id="header-cover">
               <h1 id="page-title">
-                Forum - Dansk
+                Forum - Inspiration
               </h1>
             </div>
         </header>
         <div id="wrapper-forum">
           <div id="emne-container">
               <h1 class="boks-titel">
-                Dansk
+                Nyeste indlæg
               </h1>
             <div class="traad-container">
               <a href="forum-traad.html">
                 <h1 class="traad-titel">
-                  Morbi pharetra sit amet diam nec gravida
+                  Få leg og sjov ind i grammatikken!
                 </h1>
               </a>
               <p class="forum-beskrivelse">
@@ -49,7 +49,7 @@
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                Morbi pharetra sit amet diam nec gravida
+                Sådan lærte jeg mine elever at samarbejde er vigtig.
               </h1>
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -57,7 +57,7 @@
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                Morbi pharetra sit amet diam nec gravida
+                Inspiration til opgaver undernfor?
               </h1>
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -65,7 +65,7 @@
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                Morbi pharetra sit amet diam nec gravida
+                Ide til hvordan jeg får mine elever til at holde mobilen i tasken?
               </h1>
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -73,7 +73,7 @@
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                Morbi pharetra sit amet diam nec gravida
+                Stavning med spil og idræt
               </h1>
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -81,7 +81,7 @@
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                Morbi pharetra sit amet diam nec gravida
+                Det her virkede for mig, det kan være det hjælper jer også! 
               </h1>
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
