--- a/forum-traad.html
+++ b/forum-traad.html
@@ -27,7 +27,7 @@
       <div id="header_container">
         <div id="header-cover">
           <h1 id="page-title">
-            Forum / Dansk / Morbi pharetra sit amet diam nec gravida
+            Forum / Dansk / Få leg og sjov ind i grammatikken!
           </h1>
         </div>
     </header>
