--- a/forum.html
+++ b/forum.html
@@ -36,12 +36,12 @@
          <div class="forum-container">
            <a href="forum-dansk.html">
              <h1 class="boks-titel">
-             Emrah
+             Inspiration
             </h1>
           </a>
           <div class="traad-container">
             <a href="forum-traad.html"><h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Få leg og sjov ind i grammatikken!
             </h1>
           </a>
             <p class="forum-beskrivelse">
@@ -50,7 +50,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Sådan lærte jeg at håndtere mine elever.
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -58,7 +58,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              En der har en god opgave med søjlediagrammer?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -67,11 +67,11 @@
          </div>
          <div class="forum-container">
            <h1 class="boks-titel">
-             Kevin
+             Undervisning
           </h1>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Hvordan får i eleverne til at lave lektier?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -79,7 +79,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Forbereder alle dagen før?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -87,7 +87,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Jeg er ny her inde, vil bare lige sige hej!
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -98,11 +98,11 @@
        <div class="col-2">
          <div class="forum-container">
            <h1 class="boks-titel">
-             Solveig
+             KUBO
           </h1>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Nogen der har erfaring med KUBO?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -110,7 +110,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Hvordan lærer jeg selv kodning?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -118,7 +118,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Kan en henvise til en god opgave om kodning?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -127,11 +127,11 @@
          </div>
          <div class="forum-container">
            <h1 class="boks-titel">
-             Christina
+             Gode råd
           </h1>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Hjææææælp, mig med at forstå..
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -139,7 +139,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Søger råd til nutids`r
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
@@ -147,7 +147,7 @@
           </div>
           <div class="traad-container">
             <h1 class="traad-titel">
-              Morbi pharetra sit amet diam nec gravida?
+              Opgave til noget udenfor i dansk?
             </h1>
             <p class="forum-beskrivelse">
               Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
