--- a/materialer.html
+++ b/materialer.html
@@ -36,7 +36,7 @@
         Kurser
       </h1>
       <div class="kursus">
-        <img src="assets/images/kursus1.png" class="kursus-billede">
+        <img src="assets/images/test.mand.png" class="kursus-billede">
         <p class="kursus-beskrivelse">
           Commune patrioque pro ad. Dicit apeirian nominati an vel, in est copiosae aliquando, mei homero ridens ocurreret et. Eu pro essent invidunt maluisset.
         </p>
