--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       </div>
         </header>
   <div id="container">
-    <div class="section_container">
-
+    <div class="boks">
+      <h1 class="boks-titel">Nyeste indlæg</h1>
       <div class="boks-person">
         <img src="assets/images/dame1.png" alt="mand1" class="tilpas">
         <h2>Johanne Hansen</h2>
@@ -115,8 +115,8 @@
         <p class="beskrivelse">Jeg er normalt sproglærer. Men jeg skal være vikar i matematik imorgen. og jeg har ingen ide om.. <br><br></p>
         <a href="forum-traad.html" class="comment">Kommenter</a>
       </div>
+      </div>
     </div>
-  </div>
   <footer>
     <div class="flex justify-center">
       <div>
