Fix af side materialer.html

--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -39,7 +39,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave1.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 1
             </p>
           </a>
@@ -47,7 +47,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave2.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 2
             </p>
           </a>
@@ -55,7 +55,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave3.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 3
             </p>
           </a>
@@ -63,7 +63,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave4.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 4
             </p>
           </a>
@@ -71,7 +71,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave5.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 5
             </p>
           </a>
@@ -79,7 +79,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave6.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 6
             </p>
           </a>
@@ -87,7 +87,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave7.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 7
             </p>
           </a>
@@ -95,7 +95,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave8.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 8
             </p>
           </a>
@@ -103,7 +103,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave9.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 9
             </p>
           </a>
@@ -111,7 +111,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave10.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 10
             </p>
             </a>
@@ -119,7 +119,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave11.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 11
             </p>
           </a>
@@ -127,7 +127,7 @@
           <div class="opgave-boks">
             <a href="opgave-forholdsord.html">
             <img src="assets/images/opgave12.png" class="opgave-billede">
-            <p class="boks-hvidtekst">
+            <p class="boks-opgtekst">
               Opgave 12
             </p>
             </a>
