--- a/forum-dansk.html
+++ b/forum-dansk.html
@@ -30,6 +30,14 @@
               <h1 id="page-title">
                 Forum - Inspiration
               </h1>
+              <div class="choices">
+                <h2>Nyeste</h2>
+                <div class="fa fa-caret-square-o-down">
+                </div>
+              </div>
+              <div class="search">
+                <h2>Søg</h2>
+              </div>
             </div>
         </header>
         <div id="wrapper-forum">
@@ -81,7 +89,7 @@
             </div>
             <div class="traad-container">
               <h1 class="traad-titel">
-                Det her virkede for mig, det kan være det hjælper jer også! 
+                Det her virkede for mig, det kan være det hjælper jer også!
               </h1>
               <p class="forum-beskrivelse">
                 Fusce dignissim velit ex, et laoreet turpis vehicula ac. Quisque fermentum odio massa, a porta ligula vehicula sit amet. Sed volutpat gravida dui a malesuada.
