--- a/forum.html
+++ b/forum.html
@@ -29,6 +29,14 @@
           <h1 id="page-title">
             Forum
           </h1>
+          <div class="choices">
+            <h2>Se alle</h2>
+            <div class="fa fa-caret-square-o-down">
+            </div>
+          </div>
+          <div class="search">
+            <h2>Søg</h2>
+          </div>
         </div>
     </header>
      <div id="wrapper">
