--- a/opgaver-dansk-retstavning.html
+++ b/opgaver-dansk-retstavning.html
@@ -29,6 +29,15 @@
           <h1 id="page-title">
             Opgaver / Dansk / Retstavning
           </h1>
+          <div class="choices">
+            <h2>Sorter</h2>
+            <div class="fa fa-caret-square-o-down">
+            </div>
+          </div>
+          <div class="search">
+            <h2>Søg</h2>
+          </div>
+
         </div>
     </header>
       <div id="wrapper-opgaver">
